--- a/src/templates/en/2019/accessibility_statement.html
+++ b/src/templates/en/2019/accessibility_statement.html
@@ -124,7 +124,7 @@
         <ul>
           <li>Include accessibility as part of the development of this website.</li>
           <li>Review the accessibility using whatever tools are available.</li>
-          <li>Be transparent about Accessibility issues <a href="https://github.com/HTTPArchive/almanac.httparchive.org/search?q=accessibility&type=Issues">on our GitHub pages</a>.</li>
+          <li>Be transparent about accessibility issues <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">on our GitHub pages</a>.</li>
           <li>Address accessibility issues raised in a timely manner.</li>
           <li>Publish, and keep up to date, this accessibility statement.</li>
         </ul>
@@ -136,7 +136,7 @@
         </p>
 
         <p>
-          We consider ourselves partially conformant because we have not completed a full, externally verified, audit of the website so cannot be confident of our current status. We have audited all the pages on the website using a number of tools, including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>. We have not completed any manual Accessibility Audits or had the website professionally audited by accessibility experts.
+          We consider ourselves partially conformant because we have not completed a full, externally verified, audit of the website, nor had the website reviewed by screen reader users so cannot be confident of our current status. We have audited all the pages on the website using a number of tools, including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>.
         </p>
 
         <p>
@@ -144,27 +144,27 @@
         </p>
 
         <p>
-          We also use Google Sheets for some interactive visualizations, which may also not be conformant to WCAG accessibility standards. We do provide images to for all our figures, and only display interactive visualizations when the client software supports this. If using a web browser and you do not wish to view the interactive visualizations, then the images can be enforce by adding a <code>?print</code> query param to any of the chapters, <a href="./accessibility?print">view the Accessibility chapter in print mode</a> for one such example.
+          We also use Google Sheets for some interactive visualizations, which may also not be conformant to WCAG accessibility standards. These are loaded via <code>iframes</code> and we do provide images to for all our figures, and only display interactive visualizations when the client software supports this. If using a web browser and you do not wish to view the interactive visualizations, then the images can be enforce by adding a <code>?print</code> query param to any of the chapters, <a href="./2019/accessibility?print">view the Accessibility chapter in print mode</a> for one such example. We can look to make this functionality easier to activate if necessary, but all visualizations have detailed text descriptions, so we do not believe this is necessary. Please <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">let us know</a> if we are incorrect about this.
         </p>
 
         <p>
-          In some chapters, we also include other content on the site, no created by ourselves, including YouTube videos, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
+          In some chapters, we also include other content on the site, not created by ourselves, including YouTube videos, PDF links or links to other articles, which do not meet the strict criteria required of WCAG 2.1 level AAA. See note below on external content.
         </p>
       
         <h2 id="external-content">External content</h2>
 
         <p>
-          Many chapters link to other content (videos, PDFs, articles) which are not under our control and which may not meet the high levels of conformance that we have achieved. Were possible, we will provide links to articles in the same language as the page being viewed, but this is not always provided.
+          Many chapters link to other content (videos, PDFs, articles) which are not under our control and which may not meet the high levels of conformance that we have achieved. Where possible, we will provide links to articles in the same language as the page being viewed, but this is not always possible.
         </p>
       
         <h2 id="compatibility">Compatibility with browsers and assistive technology</h2>
 
         <p>
-          The Web Almanac is designed to be compatible with as many browsers and assistive technologies as possible. The website has been built in a progressive manner, and is fully functionality even without supporting all the modern browser features we use but you may notice a deterioration in visuals, and lack of some functionality (interactive visuals, comment counts etc.) when not using a modern browser such as a recent version of Chrome, Safari, Firefox or Edge.
+          The Web Almanac is designed to be compatible with as many browsers and assistive technologies as possible. The website has been built in a progressive manner, and is fully functionality even without supporting all the modern browser features we use, but you may notice a deterioration in visuals, and lack of some functionality (interactive visuals, comment counts etc.) when not using a modern browser such as a recent version of Chrome, Safari, Firefox or Edge.
         </p>
         
         <p>
-          At this time, we have not completed testing in assistive technology hardware or software but have used tools as above to attempt to address any issues in these devices.
+          At this time, we have not completed testing in assistive technology hardware or software but have used tools, as mentioned above, to attempt to address any issues in these devices.
         </p>
       
         <h2 id="technical-specifications">Technical Specifications</h2>
